--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </div>
 
     <div class="join" id="join">
-        <h2>Join Now</h2>
-        <p>And become part of one of the greatest COS clan.</p>
+        <h2>JOIN NOW</h2>
+        <p style="margin-top: 30px;">And become part of one of the greatest COS clan.</p>
 </div>
 <script src="index.js"></script>
 </body>
