--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<h1>Welcome to <a href = "https://discord.gg/hNCEa2t76Z" class="HyperClanText">HYPER Clan</a></h1>
+<h1>Welcome to <a href = "https://discord.gg/hNCEa2t76Z" class="HyperClanText">The Citadel</a></h1>
 <div class="intro">
 <p>We are a clan in <a href = "https://www.roblox.com/games/5233782396/" class = "cos" target="_blank" rel="noopener noreferrer">Creatures of Sonaria</a>  focused on epic battles ⚔️, event grinds 🎉, and sharing our experiences 🌟. With years of gameplay under our belts, we’re here to help newcomers with valuable tips and tricks 🧠✨ to level up your journey! Join us for fun, support, and fierce competition! 💪🐾</p>
 </div>
